统一用词：制造

--- a/article/sg0/doc/0044.md
+++ b/article/sg0/doc/0044.md
@@ -72,25 +72,20 @@ App 升级结束后，『Amadeus』一直启动着。
 我该怎样回答呢？  
 半年前，比屋定曾经试图破解红莉栖的笔记本电脑和硬盘。为了阻止她，我也考虑过在合适的时机把经历过的事说出来。结果，因为各种情况，错失了那个机会。可是现在不一样。红莉栖的笔记本电脑和硬盘已经不存在了，事到如今不该再把这事翻出来。  
 但这时，比屋定说出了让我意想不到的话。  
-“其实，这半年来，我在研究原本的课题同时，也在一直研究着时间机器。”  
+“其实，这半年来，我在研究原本的课题同时，也一直在研究时间机器。”  
 “……你说什么？”  
-“如果红莉栖做到了，那么我也……我是这么认为的。  
+“如果红莉栖能做到，那么我也……我是这么认为的。  
  一种扭曲的对抗意识吧……说不定也是在赌气。  
  但是，但是啊，  
- 如果能够做出时间机器的话……或许能够拯救红莉栖——”  
+ 如果能够制造出时间机器的话……或许能够拯救红莉栖——”  
 “快停下！！”  
-“……！”  
-这是最坏的情况……  
-事到如今又要折返回去？  
-不止如此，比屋定对红莉栖的执着不比我少。  
-“不要想这些蠢事！”  
-“……冈部先生？”  
-“不要去想，能拯救牧濑红莉栖什么的。  
- 这种可能性，是零！  
- ‘神的法则’绝不允许这种事。”  
+这是最坏的情况……事到如今又要折返回去？不止如此，比屋定对红莉栖的执念不比我少。  
+“不要想这种蠢事！”  
+“冈部……先生？”  
+“不要妄图去拯救牧濑红莉栖。那种可能性，是零！‘神’的法则绝不允许那种事。”  
 “果然……你，绝对知道些什么吧？”  
 比屋定逼近过来追问着。  
-“难道说……已经实现了？红莉栖完成了时间机器吗？  
+“难道说……已经实现了？红莉栖已经制造出了时间机器吗？  
  你已经乘坐那个，进行了人类首次时间旅行了吧？一定是那样的！”  
 “……你是有什么依据，才这么说的吗？”  
 “……！”  
@@ -127,24 +122,19 @@ App 升级结束后，『Amadeus』一直启动着。
 听完所有事的比屋定，沉默着陷入了沉思。  
 过了一会儿，她长长地叹出一口气，满脸苦涩，用手指揉着太阳穴附近。  
 “头，好痛……”  
-“你没必要全部相信。  
- 认为我脑子有问题也没关系。  
- 但是，如果你想继续研究时间机器，想着拯救红莉栖的话，  
- 我会不择手段地组织你的。  
- 所以，不要再有那些奇怪的想法了。  
- 不要自己逼自己了。”  
+“你没必要全部相信，认为我脑子有问题也没关系。  
+ 但是，如果你想继续研究时间机器，想着拯救红莉栖的话，我会不择手段地阻止你的。  
+ 所以，不要再有那些奇怪的想法了，不要自己逼自己了。”  
 比屋定抬起手制止我继续说下去。  
-“让我稍微整理下。你所说的 ‘*Reading·Steiner*’，  
- 不就新型脑炎吗？和雷斯吉宁教授说到的症状一样啊……”  
+“让我稍微整理下。  
+ 你所说的 ‘*Reading·Steiner*’，不就新型脑炎吗？和雷斯吉宁教授说的症状一样啊……”  
 “是……是的，或许就是这样。  
- 我还在犹豫，该不该对雷斯吉宁教授说，  
- 说不定会导致无谓的混乱……  
- 你怎么认为？”  
+ 我还在犹豫，该不该告诉雷斯吉宁教授，说不定会导致不必要的混乱……你怎么想？”  
 “……别问我。”  
 比屋定还在用指尖揉着太阳穴附近。  
-“说的也是。抱歉。”  
+“说的也是，抱歉。”  
 “你真的破坏了红莉栖的笔记本电脑吗？”  
-“是的，破坏掉了。”  
+“是的，已经破坏了。”  
 “里面呢？看过了吗？”  
 “不知道破解方法，没办法看。”  
 听说桶子也举手投降了，那我怎么可能破解得了。  
@@ -153,8 +143,8 @@ App 升级结束后，『Amadeus』一直启动着。
 比屋定一个接一个地向我抛出问题。不知为何，她给我的感觉，好像有些急躁。  
 “你知道红莉栖是如何完成『时间跳跃机』的吗？”  
 “大致上吧。”  
-“能重现出来吗？”  
-“不好说。如果有桶子的帮助的话，或许……”  
+“能重现吗？”  
+“不好说，如果有桶子的帮助的话，或许……”  
 “能行，对吧？”  
 “我一个人的话很难。”  
 “再加上我呢？”  
