--- a/article/sg0/doc/0046.md
+++ b/article/sg0/doc/0046.md
@@ -78,16 +78,13 @@
 “冈部，牺牲了红莉栖什么的，对她见死不救什么的。  
  他是这么对我说的。”  
 “啊……”  
-“如果制作出时间机器，想要再去拯救红莉栖的话，就会回到那个时候。”  
+“如果制造出时间机器，想要再去拯救红莉栖的话，就会回到那个时候。”  
 ——我在伤害她。  
-但是，话却止不住地继续流淌出来。  
-“冈部非常害怕会变成那样。  
- 一直在拼命地保护着你。  
+但是，伤人的话语却止不住地继续流淌出来。  
+“冈部非常害怕会变成那样，一直在拼命地保护你。  
  这里，是为了守护你，而牺牲了很多其他东西所选择的世界哦。  
  虽然，他应该什么都没有告诉过你吧。”  
-“这不是真的……  
- 那种事……  
- 冈伦……”  
+“这不是真的……那种事……冈伦……”  
 真由理受到了沉重的打击，什么都说不出来。那双眼睛里，泪水好像随时准备夺眶而出。紧接着，她背过身体，低落地垂着肩膀，一个人走开了。她的背影摇摇晃晃，看起来摇摇欲坠。突然被告知这些过于残酷的事实，让她甚至动摇了自身的存在意义。真帆能理解真由理现在的心境。  
 
 ![](../static/image/0046-2.png)
