--- a/article/sg0/doc/0048.md
+++ b/article/sg0/doc/0048.md
@@ -1,6 +1,6 @@
 # 私秘境里的污点 - 12
 > 1.143688  
-> [ 2011/07/08 ] 冈伦被救出；篝去世，『Amadeus』被删除；桶子、菲莉丝、琉华逃亡；真由理、铃羽、真帆失踪。冈伦放弃之下，桶子决心造出时间机器。  
+> [ 2011/07/08 ] 冈伦被救出；篝去世，『Amadeus』被删除；桶子、菲莉丝、琉华逃亡；真由理、铃羽、真帆失踪。冈伦放弃之下，桶子决心制造时间机器。  
 
 | [←prev](./0047) | [menu](../) | [next→](./0049) |
 
@@ -71,23 +71,12 @@
 神的法则，无论如何也不肯放过我吗……  
 脱离因果之环就是如此的罪业深重吗……  
 如果是这样，明明只要诅咒我一个人就可以了……  
-“我，要造出……时间机器。”  
+“我，要制造……时间机器。”  
 “桶子……”  
-“别无选择，非造不可了吧。  
- 怎么可能就这样结束啊！  
- 冈伦你打算怎么办……？”  
-升腾着滚滚浓烟的秋叶原。我就这么呆呆地看着，呆呆地站在这里。  
+“别无选择，非做不可了吧。怎么可能就这样结束啊！冈伦你打算怎么办……？”  
+我就这么呆呆地站在这里，呆呆地看着，升腾着滚滚浓烟的秋叶原。  
 “我……！我……我…………”  
-眼泪夺眶而出。我瘫倒在那里，连站起来的力气也没有。  
-对于桶子的询问，我无论如何也没有办法回答。  
-无论多么努力，无论多么拼命进行轨道修正，到头来一切还是向着神明所期望的那样收束。  
-违抗神是没用的，桶子……  
-我已经……累了……  
-稍微休息一下吧。  
-距离真正的第三次世界大战爆发还有好几年呢。  
-距离我死亡还有 14 年呢。  
-绝对不做毫无胜算的抗争，尽力地，自欺欺人地地活下去吧。  
-这正是跟我这种人相称的——人生的陌路。  
+眼泪夺眶而出。我瘫倒在那里，连站起来的力气也没有了。对于桶子的问题，我无论如何也没有办法回答。无论多么努力，无论多么拼命修正轨道，到头来一切还是向着神明所期望的方向收束。违抗神是没用的，桶子……我已经……累了……稍微休息一下吧。距离真正的第三次世界大战爆发还有好几年呢，距离我的死亡还有 14 年呢。绝对不做毫无胜算的抗争，拼尽全力，自欺欺人地地活下去吧。这正是跟我这种人相称的——人生的陌路。  
 
 对不起，比屋定。  
 对不起，真由理。  
