--- a/article/sg0/doc/0078.md
+++ b/article/sg0/doc/0078.md
@@ -280,7 +280,7 @@
 “但那也只是在和我们相比的情况下。  
  ‘红莉栖’的基础是红莉栖本人，也就是人类的记忆。  
  是否将之看作是人工智能超越了人类，还有待考量吧。  
- 但是，我认为要造出超越人类的人工智能，还差一些。  
+ 但是，我认为要制造出超越人类的人工智能，还差一些。  
  本来研究者内部认为，2050 年左右会迎来人工智能超越人类的时代，  
  就是所谓的 *Singularity Point*（技术奇点）。  
  想必『Amadeus』的登场会让那一天来得更早吧。”  
