--- a/article/sg0/doc/0092.md
+++ b/article/sg0/doc/0092.md
@@ -44,9 +44,9 @@
 
 真帆轻抚着腿上的小提包，里面装着硬盘，来自红莉栖的笔记本电脑。在最后的对话里，红莉栖透露了个人电脑的登录密码，正是她为了欺骗莱耶丝哼唱的，莫扎特 A 大调第 11 号钢琴奏鸣曲，第一乐章的开头旋律。硬盘里保存着红莉栖写了一半的论文，罗列着连创意也算不上的关键字集合，还有无数的情报。当然，时间机器相关的论文也在里面。真帆将复印件交给了桶子，自己打算回国之后详细调查一番。  
 （时间机器……）  
-（绝对，会造出来。）  
+（绝对，会制造出来。）  
 （然后，绝对会拯救你。）  
-（我的，阿马德乌斯。）  
+（我的，Amadeus。）  
 
 窗外的景色开始移动，飞机开始向跑道滑行，准备起飞。  
 （再见了，日本）  
