--- a/article/sg0/doc/0095.md
+++ b/article/sg0/doc/0095.md
@@ -24,7 +24,7 @@
  这是我重新制造的，说起来应该叫『电话微波炉·改』呢\~  
  准确的说是要加(暂)对吧？所以就变成了『电话微波炉(暂)·改』\~”  
 红莉栖眯起一只眼睛，故作轻松地说着无关紧要的话。那样子与刻在我脑海深处的一样可爱，可是现在的我完全无暇欣赏，也无暇接上她的话题。  
-“名字什么的怎么样都好。为什么……要重新造出来……”  
+“名字什么的怎么样都好。为什么……要重新制造出来……”  
 “为了把邮件送到过去。我要发送邮件，改变世界线。  
  嗯，对你来说用‘回去’比较好吧，**回到原来的世界线**……  
  实际上，完成这个，是一个多月前的事情了。  
