--- a/article/sg0/doc/0105.md
+++ b/article/sg0/doc/0105.md
@@ -103,8 +103,8 @@
 铃羽什么也没说，只是用如同冻结般冷静的双眼，直直地盯着比屋定。  
 “比屋定，铃羽最开始已经告诫过你，这不是在编故事也不是开玩笑。  
  铃羽和篝是从 25 年后的未来穿越回来的——通过时间机器。”  
-“时间机器？这种东西怎么可能造出——”  
-“那么如果我告诉你，创造了其理论基础的是牧濑红莉栖呢？”  
+“时间机器？那种东西怎么可能——”  
+“那么如果我告诉你，奠定了其理论基础的是牧濑红莉栖呢？”  
 “……”  
 一听到红莉栖的名字，比屋定脸上的愤怒就消失了。  
 “这样……吗…………我知道了，那就姑且听听。”  
@@ -118,7 +118,7 @@ D-mail。
 世界线收束理论。  
 2036 年的事。  
 篝的处境。  
-除了一个——红莉栖的死亡真相。  
+除了一件事——红莉栖的死亡真相。  
 
 
 <br/>
