--- a/article/sg0/doc/0106.md
+++ b/article/sg0/doc/0106.md
@@ -120,12 +120,12 @@
 “但是为此所需的篝的记忆数据我们却没有……”  
 “只能期待他们还留有备份了。”  
 “装置怎么解决？若能轻易找到就好了。”  
-“没有就自己造。”  
+“没有就自己制造。”  
 “有这么简单……”  
-“但是，红莉栖就造出来过不是吗？”  
+“但是，红莉栖就制造出来过不是吗？”  
 “呃？”  
 啊，是啊，用『时间跳跃机』那部分就可以了。  
-“那么我也可能会……不，我一定会造出来给你看。”  
+“那么我也可能会……不，我一定会制造出来给你看。”  
 这样的话，也许我也能帮上忙。  
 “问题是记忆数据在哪里，这个只能想办法调查了。”  
 虽说如此，掌握的信息还太少了。只知道是外国的军队——应该是西方的军队。这也不是特别精确的情报。如果说有人掌握着关键情报，就是那个黑色骑手装的女人了……一瞬间我脑海中浮现出一个人——  
