--- a/article/sg0/doc/0107.md
+++ b/article/sg0/doc/0107.md
@@ -12,7 +12,7 @@
 ![](../static/image/0107-1.png)
 
 电车里，比屋定真帆无法抑制自己的兴奋。自称来自未来的两名少女，还有冈部伦太郎不断进行时间跳跃的故事。通常来说，不论如何也不会相信。但是，如果说这些构想是基于牧濑红莉栖的智慧的话，就能接受。如果是她——那位天才，也许能将之化为可能。红莉栖对于真帆来说，就是能让她感受到那种可能性。而且，不管怎么说，真帆亲眼见到了那个东西。  
-从 LAB 离开后，她被铃羽带到了广播会馆的屋顶，看到了真正的时间机器。虽然时间紧迫，而且又是黑夜，没有进行详细调查，但那一看就不是现代技术能够制造的东西。说真心话，她真想从明天——不，今天就开始详细分析那个机器，然后造个一样的出来。但是，在那之前，真帆有不得不完成的事情——红莉栖研发的『时间跳跃机』，制造其改良版，为此要暂时先泡在 LAB 里了。  
+从 LAB 离开后，她被铃羽带到了广播会馆的屋顶，看到了真正的时间机器。虽然时间紧迫，而且又是黑夜，没有进行详细调查，但那一看就不是现代技术能够制造的东西。说真心话，她真想从明天——不，今天就开始详细分析那个机器，然后制造个一样的出来。但是，在那之前，真帆有不得不完成的事情——红莉栖研发的『时间跳跃机』，制造其改良版，为此要暂时先泡在 LAB 里了。  
 这么思考着，真帆来到了位于和光市的办公室，为了拿些必要物品。从外面看办公室的窗户，即使到了这个时间，依然看起来灯火通明。  
 “*Maho!*”  
 一进入办公室，雷斯吉宁教授就脸色铁青地赶了过来。  
