--- a/article/sg0/doc/0108.md
+++ b/article/sg0/doc/0108.md
@@ -25,7 +25,7 @@
 “话说回来，冈伦，她……真的，就像是另一个人。”  
 “是啊……”  
 我对于桶子的耳语点头回应。这些天里，篝的大脑受到了大量红莉栖记忆的侵蚀。最近，她和长时间呆在这里的真帆，经常进行专业方面的交流，对于真帆的称呼也完全变成了“前辈”。虽然真帆最初也感到违和，但现在看样子已经习惯了。真帆也想与红莉栖探讨装置的概要，看样子是帮上忙了。  
-“话说回来，在这样的 LAB 里真的造出了『时间跳跃机』……  
+“话说回来，在这样的 LAB 里真的制造出了『时间跳跃机』……  
  就算已经亲眼看过时间机器也还是不敢相信。”  
 “但是，将人的记忆全部数据化再发向过去的想法很厉害呢，不愧是真帆前辈。”  
 “这句话，完完整整地还给你。”  
