--- a/article/sg0/doc/0129.md
+++ b/article/sg0/doc/0129.md
@@ -1,6 +1,6 @@
 # 盟誓的文艺复兴 - 07
 > 1.055821  
-> [ 2011/01/31 ] 凤凰院凶真的复活！！与动画 21 集不同，在场成员是 LABMem 全体，“世界修正拳”不是桶子，而是铃羽揍的。  
+> [ 2011/01/31 ] 凤凰院凶真的复活！！与动画 21 集不同，在场成员是 LABMem 全体，铃羽挥出“世界修正拳（主动）”。  
 
 | [←prev](./0128) | [menu](../) | [next→](./0130) |
 
