--- a/article/sg0/doc/0140.md
+++ b/article/sg0/doc/0140.md
@@ -90,7 +90,7 @@
 “比如说，把身经百战的飞行员的记忆数据，复制到无人战斗机上使用。  
  还有之前说过的医疗上的应用，还记得吗？”  
 “那个，把记忆数据写回人类的大脑吗？”  
-“对。如果能修改记忆数据，再写回去的话，就能造出可怕的怪物，  
+“对。如果能修改记忆数据，再写回去的话，就能制造出可怕的怪物，  
  像是‘不会感到恐惧的士兵’或者‘不论何种不人道的任务都能平静完成的部队’。”  
 “哇，简直是好莱坞电影啊。”  
 桶子的感慨和我相同，现实已经要追上小说和电影了吗？  
