--- a/article/sg0/doc/0153.md
+++ b/article/sg0/doc/0153.md
@@ -30,7 +30,7 @@
 “这个不行。和『电话微波炉(暂)·二号机』一起工作的话，会立刻跳闸的。  
  而且那个空调会让电费变得很吓人哦。不是说了嘛，一天只能用一个小时……”  
 “……”
-多么恶劣的环境啊……红莉栖就是在这种环境里造出了『时间跳跃机』吗？一想到这点，真帆就对红莉栖肃然起敬。  
+多么恶劣的环境啊……红莉栖就是在这种环境里制造出了『时间跳跃机』吗？一想到这点，真帆就对红莉栖肃然起敬。  
 “知道了啦。不过现在满身黑灰，我想借用一下淋浴间。”  
 “请用请用。”  
 “先说好，你要是敢偷窥什么的……我马上就联系铃羽小姐。”  
