--- a/article/sg0/doc/0154.md
+++ b/article/sg0/doc/0154.md
@@ -21,7 +21,7 @@
 “冈伦带来的消息没有一次是好的。”  
 “好了，听着，我昨晚和雷斯吉宁教授一起吃了饭，谈了留学的事情。”  
 “啊，又是那件事啊……”  
-现在，我和雷斯吉宁教授会定期联系。当然，比屋定来日本的事情，教授也知道，昨天还给我看了比屋定从冲绳发来的照片。画面中，浪花拍打着前方一脸死板的比屋定，大概是家人或者朋友拍的吧。席间，雷斯吉宁教授诚心地邀请我去维克多·孔多利亚大学留学，就此商谈的最低条件，是从现在的大学毕业，然后通过维克多·孔多利亚大学的留学测试。  
+现在，我和雷斯吉宁教授会定期联系。当然，比屋定来日本的事情，教授也知道，昨天还给我看了比屋定从冲绳发来的照片。画面中，比屋定一脸死板地站在浪花中，大概是家人或者朋友拍的吧。席间，雷斯吉宁教授诚心地邀请我去维克多·孔多利亚大学留学，就此商谈的最低条件，是从现在的大学毕业，然后通过维克多·孔多利亚大学的留学测试。  
 “因为机会难得，所以也向教授介绍了你的事情。他对你也挺感兴趣。”  
 “诶？我？”  
 “维克多·孔多利亚大学有一个【情报科学研究所】，听说聚集了世界顶尖的黑客，以你的水平一定可以加入。”  
@@ -86,14 +86,14 @@
 “是吗？”  
 桶子看向开发室里面的架子，曾经的未来道具们蒙上了厚厚的灰尘。桶子的目光充满怜惜，什么啊，这个态度是想说，那些事情是宝贵青春上的一页吗？“别开玩笑了！”本想这么说，还是忍住了。  
 “你忘了我说过什么了吗？这东西很危险，不是我们能够持有的。”  
-“嗯，可是……我未来不能不造出时间机器的吧。所以我想，研究这东西就是迈出第一步。”  
+“嗯，可是……我未来不能不制造出时间机器的吧。所以我想，研究这东西就是迈出第一步。”  
 “桶子！”  
 我忍不住大喝一声，冲动地对着桶子大吼着逐步逼近：  
 “我说过多少次了，多少次多少次多少次了啊！！  
  因为这东西，发生了什么？因为这东西，我经历了什么？  
- 因为造出这东西，真由理会被杀……！  
- 因为造出这东西，红莉栖牺牲了……！  
- 因为造出这东西，你的女儿跳回过去，最后自杀了……！  
+ 因为制造出这东西，真由理会被杀……！  
+ 因为制造出这东西，红莉栖牺牲了……！  
+ 因为制造出这东西，你的女儿跳回过去，最后自杀了……！  
  如果你忘了的话，那我就再跟你说一次。  
  你是笨蛋吗？那种不亲身经历一次就不会懂的笨蛋吗？！”  
 
