--- a/article/sg0/doc/0008.md
+++ b/article/sg0/doc/0008.md
@@ -128,7 +128,7 @@
  也就是说，完全不现实。”  
 这是从 α 世界线的红莉栖那里的现学现卖。但是，画面中的“她”却不为所动。  
 “这应该是因为科学家还没有完成一些重大的发现吧。”  
-“那么，你是认为时间机器一定会被造出来吗？”  
+“那么，你是认为时间机器一定会被制造出来吗？”  
 “‘也不是说不可能’，我可是这样说过的哟\~”  
 果然见解上还是存在着微妙的差异。是因为这里是 β 世界线吗？还是说——  
 “呐，比屋定小姐，‘她’是能够明白自己是从原版的记忆派生出来的存在吧。”  
