--- a/article/sg0/doc/0139.md
+++ b/article/sg0/doc/0139.md
@@ -5,7 +5,7 @@
 ## 情报整理 | 各方势力
 ### LABMem
 - 冈部伦太郎
-  - 已觉醒 + 世界修正拳
+  - 已觉醒 + 世界修正拳（主动）
   - 2025 年去世（？）
   - 亲历未来战争世界与琉华子的牺牲
   - 3000 次 跳跃回到过去，集齐 LABMem
@@ -71,7 +71,7 @@
   - 删除『Amadeus』的记忆备份
   - 删除篝脑海中的记忆备份
 - 凤凰院凶真觉醒
-  - 3000 次时间跳跃——世界修正拳
+  - 3000 次时间跳跃——世界修正拳（主动）
   - 发送 D-RINE
   - ■■■■■■■■■■
 - ■■■■■■■■■■■■■
