--- a/article/sg0/doc/0156.md
+++ b/article/sg0/doc/0156.md
@@ -108,7 +108,7 @@
 我和比屋定对视了一下。  
 “难道……被她听到了吗……刚才的对话……？”  
 “这么说起来……”  
-“不知什么时候，从浴室出来的桶子站在我的背后。”  
+“不知什么时候，从淋浴间出来的桶子站在我的背后。”  
 “告诉我冈伦要来 LAB 的就是真由喜……”  
 “她也说她正在来这里的路上。”  
 “那么、正好赶上了吗……！”  
