--- a/article/sg0/doc/0157.md
+++ b/article/sg0/doc/0157.md
@@ -7,7 +7,7 @@
 ---
 
 “呼——还是这么热呢。”  
-“时间已经快到下午 6 点，夏桶子后的太阳，虽然终于落到了建筑的另一边隐藏了起来，但是夏空仍然有一部分是红色，剩下的被染成蓝色。”  
+“时间已经快到下午 6 点，夏至后的太阳，虽然终于落到了建筑的另一边隐藏了起来，但是夏空仍然有一部分是红色，剩下的被染成蓝色。”  
 “铃羽这几天都在仔细的保养位于广播会馆楼顶的时间机器。”  
 “差不多，出发前往过去的时刻已临近。”  
 “对机器的保养也自然更加用心。”  
