--- a/article/sg0/doc/0160.md
+++ b/article/sg0/doc/0160.md
@@ -1,140 +1,10 @@
-# 无限远点的牵牛星 - 07
+# 无限远点的牵牛星 - 08
 > 1.129954  
-> [ 2011/07/07 铃羽视角 ] 铃羽收到了未来另一世界线桶子的视频，表示她和真由理一起又发现了一条通往命运石之门的道路，给她们发布「*Operation·Arclight*（织女星）」。这时真由理被武装部队挟持，铃羽只能暂时听从他们的要求。  
+> [ 2011/07/07 铃羽视角 ] 铃羽找准机会反杀几人，混战中真由理受伤。正当铃羽打算毁掉时间机器时，篝来到现场，由于真由理受伤而发狂，虐杀了剩余的士兵。  
 
-| [←prev](./0158) | [menu](../) | [next→](./0160) |
+| [←prev](./0159) | [menu](../) | [next→](./0161) |
 
 ---
-
-“铃羽按下了手机收到的视频邮件的播放按钮。”  
-“画面经过相当大比率的压缩而显得模糊。在这样的画面中，那个人出现了。”  
-“对于铃羽来说，这是一直都看过的面孔，现在也在身边的面孔，同时也是非常想念的面孔。”  
-“在年幼的时候经常抱着铃羽的那个人，在影像中大概在 35 岁左右吧。”  
-“呀，铃羽。你还好吗？是爸爸哦。这里是 2025 年。”  
-“把各种各样的事情都托付给你，真是对不起。请你原谅我。”  
-“你已经收到了这封视频邮件就说明……你，不，你和真由喜又发现了一条通往命运石之门的道路了吧。”  
-“总之计划将进入下一个阶段。”  
-“你说不定有生过气，为什么在最初开始时没有把所有的指示都告诉你。”  
-“但是，不是不告诉你。是我没能告诉你。”  
-“在你出发的世界线的我，并没有现在这个的作战计划。”  
-“也许你已经意识到了——因为你和真由理的选择，世界线又变动了一点。”  
-“也就是说，我和你出发那条线上的桥田至不同，是另一条世界线的桥田至了。”  
-“但是，铃羽，你不要搞错了。不管在哪条世界线上，我都是最爱女儿的。”  
-“哈哈。顺便问一下，比较一下如何呢，和你的那个爸爸比起来那个更帅啊。”  
-“我最近开始锻炼肌肉了……哼哼？”  
-“桶子，不要说无聊的事了，赶紧说作战计划的内容！”  
-“真是的，反正你也是三分钟热度，不要做这些无关紧要的报告！”  
-“可以录像的时间快要结束了喵！”  
-“哎呀，别样催我嘛。”  
-“总之，接下来说明这封视频邮件本来的目的。”  
-“「*Operation·Arclight*（织女星）」的详细内容。”  
-“这是连一瞬间的错误也不允许的，极限的战斗，用心的听好了？”  
-“于是铃羽暂时停止了视频。”  
-“既然说“用心听”的话，就必须要有相当的心里的准备。为了能完美地记下作战内容，转换现在轻飘飘的心情是有必要的。”  
-“说实话，从 2025 年的父亲那里收到视频邮件，铃羽相当的兴奋。”  
-“像是自己独立去完成的事情，得到了父亲的认同般感觉。”  
-“正因为如此，才必须要认真。”  
-
-![](../static/image/0159-1.png)
-
-“真由理一个人伫立着，拼命地在手机上打进什么。”  
-“在收到视频邮件的时候，就向真由理说明了可能由于不测的事态，今天就要向过去出发。”  
-“今天——这一天，这一刻——收到有视频的短信这件事，一定是有意义的。”  
-“铃羽有着这样的感觉。”  
-“你在做什么？”  
-“啊，铃小姐。怎样？今天可以出发吗？”  
-“我打算先确认一下作战概要。”  
-“是吗……”  
-“嗯，如果今天出发了的话，真由喜是不是就要下落不明了？”  
-“因为不想让他们担心，所以我想给爸爸妈妈，还有朋友和大家预先写一封邮件。”  
-“能有直接传达给冈伦叔叔的时间就好了。”  
-“在太阳下山之前，应该就能完成作战内容的确认并且决定如何行动吧。”  
-“也给冈伦写了邮件了，没问题的。”  
-“邮件就可以了吗？”  
-“……嗯。”  
-“真由理，害羞地，重重地点了头。”  
-“在她的眼中已经没有泪水，不过，淡粉色的脸颊上，泪水滴下的痕迹依然清晰。”  
-“……总觉得……很难为情呢。”  
-“但是，难得写了的邮件，能不能发过去也不一定，现在有点为难呢。”  
-“为什么？”  
-“信号……显示在不在服务区啊，是地点不好吗？”  
-“不在服务区……？”  
-“铃羽看了看真由理手机显示的画面。”  
-“信号状况指示，一条都没有。”  
-“真奇怪。在这个地方的话，平常都有信号啊。”  
-“铃羽马上将自己的手机也确认了一下。”  
-“我的也是。”  
-“铃羽在确认了自己和真由理的手机信号状况一样后，瞬间绷紧了面孔。”  
-“……有不好的预感。”  
-“真由理照着铃羽的指示隐藏在了时间机器的背后，铃羽一边隐藏起脚步声，一边跑向通往楼下的铁门前。”  
-“尽可能的小心不发出摩擦的声音，同时把铁门开启了一个拳头宽的缝隙。”  
-“听了一下馆内的气息，和平常没有丝毫变化，寂静无声。”  
-“下面的楼层，只有一些活动空间和仓库等，再像今天这样的普通日子里，这样的安静的是常有的。”  
-“……是我的错觉吗？”  
-“铃羽感到很纳闷，同时轻轻地想关上铁门——”  
-“啊啊啊啊——!。”  
-
-![](../static/image/0159-2.png)
-
-“听到真由理的悲鸣后赶紧回头，穿着迷彩服的特工的身影接二连三地越过屋顶的栅栏。”  
-“真由理，被其中的一个抓住了。”  
-“是从外面的墙壁爬上来的吗？”  
-“铃羽对自己的失误非常的后悔。”  
-“对于墙上的入侵应该要充分警戒才是。”  
-“但是，收到父亲的电子邮件后，心情不知不觉就放松了。”  
-“装备着自动步枪的穿着迷彩服的男人们，约 30 名。”  
-“真由理被劫做人质，铃羽无法动弹。”  
-“就那样放下枪趴在地上。手放在头上。”  
-“男人中的一个，冷淡地向铃羽命令道。”  
-“抵抗的话，这个女人的生命就无法保证。”  
-“将真由理的手别在背后的男人，把顶在她后脑勺的枪的保险打开，以威慑铃羽。”  
-“可恶！”  
-“只有服从。铃羽把从枪套中拔出手枪，放在地上，趴了下来。手放在头后面，采取无抵抗的姿势。”  
-“铃羽……”  
-“不要说话。这些家伙，一旦认真起来真的会杀了姐姐你的。”  
-“……啊。”  
-“我不会有事的。”  
-“单是看这个迷彩服集团的行动，就能轻易地想像得到，他们是实战的专家。”  
-“这样的话，想必他们的目标就是时间机器，并且已经掌握情报证明铃羽是唯一能够操作它的人的了吧。”  
-“因此，铃羽判断自己是不会轻易被杀的。”  
-“最初命令铃羽的那个队长似的男人，从旁边用膝盖顶着铃羽，毫无顾忌地对铃羽进行搜身。”  
-“啊……我姑且也是一个女人。给我稍微小心点。”  
-“隐藏着的用来以防万一的另一把小型手枪，还有几把小刀也都被夺走了。”  
-“目标 2 和目标 3 确保。”  
-“你那边呢？”  
-“那个队长向在时间机器的周围聚集的数人呼唤道。”  
-“目标 1 确保！被锁上了，一切都在报错！”  
-“好像有数人进入了机器中。”  
-“虽说舱门一直开着是铃羽的失误，她对机器内部被鞋子踩踏也感到不悦。”  
-“做什么都没用的，那东西，不是我的话是不会听的。”  
-“……站起来。”  
-“队长，用鞋子的前头轻轻地踢了铃羽的侧腹。”  
-“手就保持那样，慢慢地起来。如果有稍微一点多余的动作，就立刻会把人质杀掉。”  
-“按照所说的那样站了起来，铃羽手被手铐靠在了后面。”  
-“后背就那样被顶着，硬带到了机器的旁边。”  
-“……是生物认证啊。”  
-“是的。”  
-“但是即使拷贝我的静脉和指纹也是没用的。”  
-“哪怕是砍下手，或是挖掉眼睛，也是不能认证的。”  
-“2036 年的系统才没有这么愚蠢呢。”  
-“铃羽说明的这件事，穿着迷彩服的家伙们似乎都知道了。”  
-“没有丝毫的动摇和焦躁。”  
-“『教授』怎么样了？”  
-“队长，向那个用枪指着真由理的部下问道。”  
-“现在正在赶往这边。”  
-“……“目标 1”和“目标 2”是捆绑的，不做洗脑是不行的。”  
-“听到洗脑这个词，铃羽咬牙切齿起来。”  
-“曾经，『瓦尔基里』的许多伙伴们都被非人道的进行了洗脑，强迫他们作为间谍潜入，最终都变成了废人，铃羽就看过了很多。”  
-“面对那个队长，铃羽转过身来。”  
-“洗脑会怎样，你应该是知道的。教授不会使用药物，而是直接鼓捣大脑。”  
-“在那之前，坦率地和我们合作才是比较聪明不是吗？”  
-“『教授』……吗？”  
-“在未来也有被这么称呼的老年的博士，率领着以毁灭『瓦尔基里』为目标的洗脑小组。对于铃羽来说，是最不能原谅的人。”  
-“而且，不使用药物的做法也是一样的。”  
-“现在与未来的两个『教授』，是同一个人是不会错的。”  
-“……我明白了。”  
-“铃羽老实地点了头。”  
-
 
 “我会听从的。但是，这样子是不行的。”  
 “铃羽，像是故意似地用背后面手铐发出叮叮当当的声音。”  
@@ -214,7 +84,7 @@
 “铃羽急忙确认周围的情况。”  
 “在那里，意料之外的出现了。”  
 
-“混在重重包围的迷彩服的男人中，不知何时出现的，穿着暗色的骑手服，戴着头盔打扮的女人伫立着。”  
+“混在重重包围的迷彩服的男人中，不知何时出现的，穿着黑色骑手装暗色的骑手服，戴着黑色的全覆式头盔的女性。  
 “啊、那家伙！？篝……！？”  
 “泄漏这个地方的，果然是篝？”  
 “篝的战斗能力，在两次邂逅中已经有把握了。”  
@@ -227,6 +97,9 @@
 “铃羽感觉到了正在看着自己——不，是看见真由理额上滴血的篝的视线。”  
 “然后，紧接着。”  
 “篝她做出了一个预想之外的行动。”  
+
+![](../static/image/0160-1.png)
+
 “……你们对妈妈……做了什么……？”  
 “你们这些家伙，对妈妈做了什么啊啊啊啊啊啊啊！！”  
 “尖叫——”  
@@ -289,4 +162,4 @@
 
 ---
 
-| [←prev](./0158) | [menu](../) | [next→](./0160) |
+| [←prev](./0159) | [menu](../) | [next→](./0161) |
