--- a/article/sg0/doc/0002.md
+++ b/article/sg0/doc/0002.md
@@ -14,7 +14,7 @@
 『很期待是怎样的研讨会呢』  
 『真由喜也想看看啊\~』  
 「对你来说可能太难了」  
-![](../static/image/emoji/mayuri-dai.png)  
+『![](../static/image/emoji/mayuri-dai.png)』  
 『说的也是呢\~那么，就不打扰你啦，再见\~\~』  
 多亏了真由理，15 分钟感觉也没那么难过了。  
 
