--- a/article/sg0/doc/0023.md
+++ b/article/sg0/doc/0023.md
@@ -181,7 +181,7 @@ nüer……nǚér……女儿？！
  也有给厂商和银行搭建线上系统  
  还有服务器的构建和运维一类平常的工作  
  还有解析病毒然后制作杀毒软件
- 还原重要数据和开发新型加密技术什么的」  
+ 还原重要数据和开发新型加密技术之类的』  
 「也就是……所谓的 SE（软件工程师）吗？」  
 『还没有专业到那种地步啦  
  但是我们小组姑且也在业界小有名气，会从世界各地接到委托哦  
