--- a/article/sg0/doc/0156.md
+++ b/article/sg0/doc/0156.md
@@ -7,118 +7,97 @@
 ---
 
 “冈部先生。”  
-“比屋定追了过来。”  
-“因为势头太猛，差点撞上来。”  
-“你觉得命运石之门，真的存在吗？”  
-“真由理小姐没有死去……并且，红莉栖也没有牺牲，这样夹缝中的世界线，你觉得存在吗？”  
-“如果你想知道曾经以此为目标的我的来龙去脉的话，就去问铃羽吧。”  
-“到底，命运是无法违抗的。”  
-“那只是毫无价值的妄想。”  
-“说的这么绝对，真的可以吗？”  
-“根本还没有证明不存在吧？”  
-“那种东西，完全是“恶魔的证明”不是吗？这种证明，谁都不可能给得出。”  
-“是的。明明还没证明到底存不存在，但你……仅仅失败一次就放弃了。”  
-“比屋定“咯吱咯吱”地咬着牙。”  
-“……真让我无语了。”  
-“什么……”  
-“那一句话，让我控制不住，一下子抓住了比屋定的肩膀。”  
-“但是，我还是努力的控制住自己。”  
-“我刚刚也说了，我以前已经挑战了几次、几十次、几百次——”  
-“我也应该说了吧？根本不是什么“神”的至理。”  
-“世界线也好，时间机器也好，命运石之门什么的也好——”  
-“都不过是构成世界的公式而已。”  
-“失败了几次、几十次、几百次？”  
-“所以又怎样？”  
-“这种事情在科学界不是很正常吗？这样还失败的话，那就挑战几千次、几万次、几亿次就好。”  
-“那样的话，一定可以找到解法。”  
+比屋定追了过来，因为势头太猛，差点撞上来。  
+“你觉得命运石之门，真的存在吗？  
+ 真由理小姐没有死去……并且，红莉栖也没有牺牲，这样狭缝中的世界线，你觉得存在吗？”  
+“如果你想知道，曾经以此为目标的我究竟经历了什么，就去问铃羽吧。  
+ 说到底，命运是无法违抗的，那只是毫无价值的妄想。”  
+“这样断言，真的可以吗？根本还没有证明它不存在吧？”  
+“那不就是<abbr title="拉丁语：probatio diabolica，表示一个极难完成的证明。比如证明不存在，因为证明存在只需要举出一个正面例子，而证明不存在却需要排除所有反面例子。在辩论中使用，则是迫使对方证明己方观点的反面，否则代表己方观点成立。这实际上是将举证义务转移给了对方，而对方却很难完成证明。比如，我说你做了某事，如果你不能证明你没做，那就代表你做了。所以在法律讨论中，才需要“谁主张，谁举证”。">‘恶魔的证明’</abbr>吗？谁都不可能给得出。”  
+“是啊，明明还没有证明它存在或者不存在，你却……仅仅失败一次就放弃了……真让人失望。”  
+“什、么……？！”  
+这一句话，差点让我失控，想要动手抓住比屋定的肩膀。不过我总算努力控制住了自己。  
+“我刚刚说了吧？我已经挑战了几次、几十次、几百次——”  
+“我也说了吧？那根本不是什么‘神’的至理。”  
+ 世界线也好，时间机器也好，命运石之门什么的也好——  
+ 都不过是构成世界的公式而已。  
+ 失败了几次、几十次、几百次？  
+ 所以那又怎样？那种事在科学界不是很正常吗？  
+ 如果还是失败了，那就再挑战几千次、几万次、几亿次就好。  
+ 这样的话，一定可以找到解法。”  
 “你……！你什么都不知道，什么都没经历过，所以才会说出这种不负责任的话……！”  
-“不。失败、挫折、后悔、还有痛苦。已经经历到令我厌烦的程度了。都是因为那个叫牧濑红莉栖的天才……”  
+“不，我已经经历到吐了，失败、挫折、后悔、还有痛苦，因为那位名为牧濑红莉栖的天才……”  
 “公式不会有感情啊！”  
-“最后解出公式的是人类哦。”  
-“在几乎要吻到的距离上，和比屋定对视着。”  
-“比屋定那慑人的眼神。”  
-“为何我只是正面抵挡这个眼神，就好像感到毫无胜算。”  
-“忍不住，移开了目光。”  
-“无声地转过身，打开玄关大门出去。”  
-“但是，衣角被她抓住，停了下来。”  
-“没想到她会这么做。”  
+“最终解出公式的，是人类啊！”  
+我和比屋定瞪着彼此，距离近到几乎要吻上。只是正面对上她那慑人的眼神，就感觉内心某处要被击溃了，于是不禁移开了视线。  
+
+我沉默地转过身，打开玄关大门准备离开。可是出乎意料的，比屋定抓住了我的衣角。  
 “……还有什么事吗？”  
-“转身不愉快地说道。”  
-“刚刚一直那么慑人地盯着我的比屋定，浮现出来悲伤的笑容。”  
-“那一瞬间我甚桶子有了“是不是世界线变动了”的错觉。”  
-“……诶？”  
-“呆呆拉着，比屋定面向我嘟囔道。”  
+我不愉快地回头看去，刚刚还气势十足的比屋定脸上，浮现出悲伤的笑容。那一瞬间，我甚至产生了世界线变动了的错觉。我目瞪口呆，比屋定却轻柔地说：  
 “你才是，不擅长说谎呢。”  
 “……说谎？”  
-“我在说谎……？”  
-“我一边揣摩这句话的意思，一边不自觉的摸了摸自己的脸。”  
-“但是，并没有因此弄明白自己的表情，有的只是不解而已。”  
-“说了……什么谎？我才没说谎。”  
-“从桥田先生那里听到的——”  
-“一年前的你，对于时间机器的话题，是不会触碰的。”  
-“更不要说是命运石之门的话题了，连开口都在忌惮。”  
-“你、你到底在说什么——”  
-“但是现在完全不一样。因为你的表情……和我以前经常出现的表情一样。”  
-“在实证实验上输了，在论文的评价上输了，在名声上也一直输着。消沉着，觉得自己已经没用了……”  
-“但是，每次在最后我对着镜中的自己呵斥道。”  
-“比屋定用食指“咻”的一下，指着自己心脏的位置。”  
-““放弃挑战的话就完蛋了。这样的话永远也赢不了。”。”  
-“然后这次，用那个手指，指着我的左胸。”  
-“现在的你，和那时候我是一个表情……”  
-“在你内心最深处，还有复仇的欲望。”  
-“对着那把自己搞得这么凄惨的命运石之门。”  
-“我？内心还没放弃……？”  
-“不对。没有这种事。”  
-“没错哦。你呢，真的，和我一模一样。”  
-“就像镜像一样。”  
-“很顽固，一旦说出口，就听不见别人的话，就算知道自己错了也绝对不会承认，像个小孩子一样闹别扭，只会给人家担心，给人添麻烦。”  
-““没有这种事”这样的，一点也不应和人家一下，让人家有点伤心呢。”  
-“……但是。正因如此，我才明白。”  
-“不管是你还是我……最后，绝对会依靠自己的力量站起来。”  
-“——对吗？冈部伦太郎先生？”  
-“在说一遍。所有的世界至理都不过是区区公式，必然存在着解法。”  
-“所以我一定会找出来。找出那个并没有“神”的存在，而只是区区公式的解法。”  
-“然后，一定找到那条通往真由理小姐不会死……红莉栖也活着的、狭缝间的世界线的道路。”  
-“因为一口气就说完的原因，比屋定呼吸急促。”  
-“明明是这么小的身体，却有着这样的气魄。”  
-“我被她这段话，这份姿态所压倒了。”  
-“那么，你要怎么做呢？”  
-“冈部所长，这里是你的 LAB 吧？所长总是不在的话，太不像话了吧。”  
-“我……我……”  
+我说了什么谎……？我揣摩着这句话的意思，不自觉地摸了摸自己的脸。即使这么做，我也没办法弄明白自己的表情，只有茫然。  
+“说谎……是什么意思？我才没有说谎。”  
+“我听桥田先生说过——一年前的你，对于时间机器的话题，是完全不会触碰的。  
+ 更不要说是命运石之门的话题了，甚至忌惮这个词。”  
+“你、你到底想说什么——”  
+“但是，现在完全不一样。因为你的表情……和我以前经常出现的表情，一模一样。”  
+“啊……？”
+“比起红莉栖，我在验证实验上输了，论文的评价上输了，名声上也一直输着。  
+ 每次我都一蹶不振，觉得自己已经没用了……  
+ 但是，每次在最后，我都对着镜中的自己呵斥道——”  
+比屋定用食指“咻”的一下，指着自己心脏的位置。  
+“‘放弃挑战的话就真的结束了，就永远也赢不了了。’”  
+然后，她用食指，指着我的左胸。  
+“现在的你，和那时候的我，是一样的表情……  
+ 在你内心的最深处，还有复仇的欲望——  
+ 对于那个，把自己搞得这么凄惨的，命运石之门。”  
+我？内心还没放弃……？  
+“不对，才没有那种事。”  
+“没错哦，你这人啊，真的是，和我一模一样，简直就是镜子里的另一个我。  
+ 很顽固，一旦说要做一件事，就听不进别人的话，即使知道自己错了也绝对不会承认，  
+ 像个小孩子一样闹别扭，只会让别人担心，给别人添麻烦。”  
+“……”
+“你这时候不是应该反驳，‘才没有那种事’吗？都不回应，让我有点受伤呢。  
+ 但是啊……正因如此，我才明白，  
+ 不管是你还是我……最后，绝对会依靠自己的力量站起来。  
+ ——对吧？冈部伦太郎先生。”  
+“……！”
+“我再说一遍，所有的世界至理，都不过是区区公式，必然存在着解法。  
+ 所以我无论如何都会找出来——那个并没有‘神’的存在，仅靠公式就能解开的钥匙。  
+ 然后，一定找到那条，通往真由理小姐不会死……红莉栖也活着的、狭缝间的世界线的道路。”  
+或许是一口气说完的原因，比屋定呼吸急促。明明是这么娇小的身体，却有着如此巨大的气魄。我被她这段话，这份姿态折服了。  
+“那么，你要怎么做呢？冈部所长，这里是你的 LAB 吧？所长总是不在，太不像话了吧。”  
+“我……我……！”  
 
 就在我们谈论到关键的时候，我的手机上收到 RINE 的讯息，我不知为何有一种不详的预感，于是立刻拿出手机查看。消息是琉华子发来的：  
-『糟糕了！我到底该怎么办！？』  
-『刚刚和真由理酱偶遇！』  
-『她就一边哭一边跑开了！』  
-『我第一次见到那么伤心的真由理酱！』  
+『不好了！我到底该怎么办！？  
+ 刚刚偶遇了真由理酱！  
+ 她一边哭一边跑开了！  
+ 我第一次见到那么伤心的真由理酱！』  
 “诶？”  
-真由理哭了……？从字面上就感觉不是一般的事态。比屋定见我不说话，就探头过来看消息的内容。我微微侧过手机方便她看，然后发消息询问琉华子：  
-「在哭？发生什么事了！？」
-『我也不清楚！』  
-『偶然遇到了真由理酱，就跟她打了个招呼』  
-『那时候，真由理酱就在哭了』  
-『我吓了一跳，就问她怎么了，然后她一下子就情绪激动起来』  
-『说什么，因为自己红莉栖小姐才死了，而且让冈部先生陷入痛苦什么的』  
-『还说自己要是不在了就好了什么的』  
-『然后就那样逃开了』  
-『我也追上去，但是最后追丢了』  
-『怎么办，冈部先生？』  
-『我该怎么办？』  
+真由理哭了……？光看文字就感觉不是一般的事态。比屋定见我不说话，就探头过来看消息的内容。我微微侧过手机方便她看，然后发消息询问琉华子：  
+「哭了！？发生什么事了！？」
+『我也不清楚！  
+ 偶遇了真由理酱，就跟她打了个招呼  
+ 那时候，真由理酱就在哭了  
+ 我吓了一跳，就问她怎么了，然后她一下子就情绪激动起来  
+ 说什么，因为自己红莉栖小姐才死了，还让冈部先生陷入痛苦什么的  
+ 还说自己要是不在了就好了什么的  
+ 然后就那样逃开了  
+ 我也追了过去，但是最后追丢了  
+ 怎么办，冈部先生？  
+ 我该怎么办？』  
 “……怎么……会？”  
-我和比屋定对视了一下。  
-“难道……被她听到了吗……刚才的对话……？”  
-“这么说起来……”  
-“不知什么时候，从淋浴间出来的桶子站在我的背后。”  
-“告诉我冈伦要来 LAB 的就是真由喜……”  
-“她也说她正在来这里的路上。”  
-“那么、正好赶上了吗……！”  
-“非常有可能不是吗！”  
-“怎、怎么这样……”  
-“有一种脚下的地面正在崩溃的错觉。”  
-“由于红莉栖的牺牲，真由理才得以存在的这条世界线。”  
-“只有这个真相是绝对不能让真由理知道的。”  
-“我自认不用说，桶子、铃羽、菲莉丝、比屋定，所有知道真相的人，都在隐瞒这件事。”  
-“必须去找——必须去找真由理，现在不能让她一个人独处。  
+我和比屋定对视了一眼。  
+“难道……刚才的对话……被她听到了吗……？”  
+“说起来……”  
+不知什么时候，桶子从淋浴间出来了，站在我的背后。  
+“告诉我冈伦要来 LAB 的就是真由喜……她也说她在来这里的路上。”  
+那么，正好赶上了吗……？非常有可能啊！”  
+“怎、怎么会这样……”  
+有一种脚下的地面正在崩溃的错觉。基于红莉栖的牺牲，真由理才得以存在的这条世界线——唯独这个真相是绝对不能让真由理知道的。除了我，还有桶子、铃羽、菲莉丝、比屋定。所有知道这个真相的人，都在隐瞒这件事。  
+必须去找她——必须去找真由理，现在不能让她一个人独处。  
 “可恶！”  
 我冲出了 LAB。  
 
