牛郎星 --> 牵牛星

--- a/article/sg0/doc/0103.md
+++ b/article/sg0/doc/0103.md
@@ -79,7 +79,7 @@
 “嗯，从桶子叔叔或者妈妈那听来的故事里的人。”  
 原来如此。听铃羽说，我在 2025 年就死了。也就是说，在篝那个时代，我已经不在了。  
 “妈妈经常会说到冈伦先生的故事呢。  
- 比如‘冈伦救了妈妈，冈伦是妈妈的牛郎星哦\~’之类的。”  
+ 比如‘冈伦救了妈妈，冈伦是妈妈的牵牛星哦\~’之类的。”  
 “那家伙，未来还在讲这种话吗？”  
 这次轮到我感到不好意思了。  
 “所以我一直都很好奇，妈妈一直念念不忘的冈伦先生，是怎样的人呢？  
