--- a/article/sg0/doc/0121.md
+++ b/article/sg0/doc/0121.md
@@ -58,7 +58,7 @@
 “不会那么顺利的！”  
 篝用力抓住了真由理的双臂。但是，真由理只是悲伤地微笑着。  
 “即便如此……真由喜也想再见他一面。  
- 凤凰院凶真，我的牛郎星，我想再见他一面。”  
+ 凤凰院凶真，我的牵牛星，我想再见他一面。”  
 “我不要这样……！”  
 其实，我明白的。恢复记忆已经有半年了，篝每天都从心底里觉得幸福。在和平的、远离战争的日本，和真由理、LAB 的成员们过着的日常生活，每天都如同宝石般闪耀，好想就这么一直持续下去。但是，其实，我明白的，那天真由理眼神里的含义，以及她会在大家都在欢闹的时候，突然陷入沉思般望向远方的理由。  
 “我呢……？我会怎么样……？  
