--- a/article/sg0/doc/0122.md
+++ b/article/sg0/doc/0122.md
@@ -14,7 +14,7 @@
   - 幼时因为篝唱的《星之奏》鼓励，凤凰院凶真觉醒
   - 在幼时和现在都救过即将被卡车撞到的篝
 - 椎名真由理
-  - 想再见到牛郎星——凤凰院凶真，决定随铃羽回到过去推冈伦一把
+  - 想再见到牵牛星——凤凰院凶真，决定随铃羽回到过去推冈伦一把
   - 最终行动被篝替代
 - 比屋定真帆
   - 从冈伦处得知时间机器情报
