统一用词：楼顶，LAB 和 广播会馆

--- a/article/sg0/doc/0013.md
+++ b/article/sg0/doc/0013.md
@@ -33,33 +33,34 @@
 “了解。”  
 这台时间机器虽然能够做到时间跳跃，但是没有办法空间移动。为了到达近 60 年前的广播会馆楼顶的话，就必须从这个坐标出发。  
 “出现问题的时候一定要保持冷静，回想以前的训练就好。”  
-“没事的哟，因为我信任着爸爸的机器。”  
+“没事的哟，因为我信任爸爸的机器。”  
 像是被这样的话语所感动，桶子张嘴想要说些什么。但是铃羽用手示意他不要说出来。  
-“很恶心的……”  
-“真是悲伤啊……我还什么都没说呢。铃羽就这么讨厌爸爸吗？”  
+“好恶心的……”  
+“好伤心啊……我还什么都没说呢，铃羽就这么讨厌爸爸吗？”  
 “反正爸爸说的话，总感觉背后有点什么小心思。”  
-“不管怎么说，对女儿总不可能有什么小心思吧！”  
-“‘最近，总觉得你跟妈妈变得好像啊哈嘶哈嘶’什么的，是谁说的来着？”  
-妈妈，并不在这个地方。在战斗中牺牲，被治安部队给残忍地杀害了。  
+“再怎么说，总不可能对女儿有什么小心思吧！”  
+“‘最近，总觉得你跟妈妈变得好像啊哈嘶哈嘶……’，这是谁说的来着？”  
+她的妈妈并不在场。她已经在战斗中牺牲，被治安部队残忍地杀害了。  
 “别把玩笑当真啊……”  
 “什么啊，是开玩笑来的？”  
 铃羽一边像是觉得遗憾似的说着，一边将目的地坐标设定为 1975 年的 8 月 13 日，需要在那里完成第一项任务。  
+
 “这样就可以了。那么爸爸，还有真由姐——”  
 铃羽在向他们做出发前的道别。突然这时，房间一阵震动，外面传来爆炸声，还有枪声和脚步声等嘈杂的声音，使得真由理和怀中的篝不由得发出一声惊叫。  
-“是屋顶那儿！要进来了！”  
+“是楼顶那边！要进来了！”  
 “可恶！比预想的要早！”  
-铃羽从枪套中拔出了枪，想要从机器上下来参加战斗，但是父亲阻止了她这么做。  
+战友的呼喊着与敌人交火，铃羽从枪套中拔出枪，想要跳出机器参加战斗，但是被父亲阻止了。  
 “不行！快点跳跃！”  
 “但是爸爸你们……”  
 “我们几个不要紧！快点去吧铃羽！”  
-“怎么可以！”
+“怎么可以？！”
 “真由喜！快把篝酱——！”  
 “诶？”  
 “这台机器，还可以再乘上一个人！”  
 桶子和真由理将还在发呆的篝抱住放进了时间机器中。  
 “铃羽酱！篝就拜托了！”  
 “……知道了！”  
-事实上，如果铃羽成功地完成了任务让世界线再构筑的话，现在的篝就这么消失的可能性极大。就算从这里逃出去也没有意义的可能性也是有的。可是另一方面，这是一个母亲想让孩子远离危险的愿望。铃羽的母亲曾经也是这样。  
+事实上，如果铃羽成功地完成了任务让世界线再构筑的话，现在的篝就这么消失的可能性极大。就算从这里逃出去也没有意义的可能性也是有的。可是另一方面，这是一个母亲想让孩子远离危险的愿望，铃羽的母亲曾经也是这样。  
 
 ![](../static/image/0013-2.png)
 
