--- a/article/sg0/doc/0016.md
+++ b/article/sg0/doc/0016.md
@@ -74,7 +74,7 @@
 “利用时间机器来改变世界线，意味着脱离这个宇宙的组成原理。”  
 冈部伦太郎的这番话闪过脑海。  
 说起来最近，自己开始越来越多地回忆起篝的事。铃羽在定期巡视这条街道——她在寻找着椎名篝。连她在不在这座城市都不确定，线索也没有，也不知道现在的样子，所以这样的行为或许根本没用。即使如此，出于自己的责任，铃羽也一定要找到篝。结果今天也是一无所获，徒劳而终了。回过头，她看向时间机器。每天最后来到这里查看也是铃羽必行的工作，最重要的原因是为了确认父亲桥田至没有来过。只要铃羽没注意，他就会试图到这里来检查时间机器，就算跟他说这样会引发时间悖论也没用。因此，铃羽必须时刻保持警惕。说实话，精神上的疲惫一直是有增无减。  
-这时屋顶的风声中混入了一声铁门开启的声音。难不成是父亲来了？铃羽仔细观察着昏暗的出入口。出现在那里的是远比父亲更加较小的，戴着猫耳的少女。  
+这时楼顶的风声中混入了一声铁门开启的声音。难不成是父亲来了？铃羽仔细观察着昏暗的出入口。出现在那里的是远比父亲更加较小的，戴着猫耳的少女。  
 “喵喵\~有了有了\~铃喵，晚上好啊喵\~”  
 “什么啊，原来是留未姐。”  
 菲莉丝踏着轻快的步子走近铃羽。  
@@ -107,7 +107,7 @@
 菲莉丝恶作剧般地眨眨一只眼睛并点点头，接着抬头仰视着时间机器。  
 “桶子喵的时间机器研究做得怎么样了喵？”  
 “似乎在竭尽全力。留未姐，这台机器，继续放在这也没关系吗？”  
-铃羽环视着整个屋顶问道。这么大的东西放在这里，之所以还没引起骚动，都是菲莉丝的功劳。既是在这附近一带拥有影响力的名家的继承人，又对秋叶原的开发做出了巨大贡献，因为这层关系，她主动承担了隐藏时间机器的任务。  
+铃羽环视着整个楼顶问道。这么大的东西放在这里，之所以还没引起骚动，都是菲莉丝的功劳。既是在这附近一带拥有影响力的名家的继承人，又对秋叶原的开发做出了巨大贡献，因为这层关系，她主动承担了隐藏时间机器的任务。  
 “嗯。这一层——不如说是楼顶，已经被菲莉丝整个借走了，别担心喵。  
  对老板说了是在研究体感游戏喵，虽然这解释有点牵强。”  
 “帮大忙了。”  
