--- a/article/sg0/doc/0031.md
+++ b/article/sg0/doc/0031.md
@@ -10,7 +10,7 @@
 『有些话想找你单独说一下，等你回复』  
 那简短的文句中，缭绕着非同一般的紧张感。  
 
-我和真由理他们分开后联系了铃羽，见面的场所定在广播馆的屋顶。到达之后，看见铃羽静静地站在黑暗之中。她的脸上完全没有笑容，盯着我的双眸闪烁着锐利的光芒，让我不禁脊背发凉。眼前的明显不是平时的铃羽，准确的说，是变回了原本的铃羽的感觉。对我来说，不会是什么好事的样子。  
+我和真由理他们分开后联系了铃羽，见面的场所定在广播馆的楼顶。到达之后，看见铃羽静静地站在黑暗之中。她的脸上完全没有笑容，盯着我的双眸闪烁着锐利的光芒，让我不禁脊背发凉。眼前的明显不是平时的铃羽，准确的说，是变回了原本的铃羽的感觉。对我来说，不会是什么好事的样子。  
 “不好意思啊，冈伦叔叔，把你叫到这种地方来。”  
 “想说的是什么？”  
 “啊，嗯……我，该怎么说呢，不懂什么话术，也不擅长什么巧妙地套出信息的方法……”  
