--- a/article/sg0/doc/0034.md
+++ b/article/sg0/doc/0034.md
@@ -20,7 +20,7 @@
 “那个地方。你明白的吧？”  
 刚才一直挂在比屋定脸上的笑容消失了。向我的眼神很认真，看来是再三思考后做好了觉悟。那个地方，指的是哪里，我马上理解了。  
 “带我去……广播会馆吧。”  
-我们来到了广播会馆。比屋定想要来这里代表着什么，我也立即就理解了。因为这里是，牧濑红莉栖逝世的地方。在那之后我也到过很多次屋顶。时间机器现在还在那里，铃羽和桶子偶尔会前去为其保养。就在几天前，我还被铃羽叫过去，用枪口指着。尽管如此，位于 8 层的，作为现场的仓库，在那之后我再也没有去过。没有去的勇气。只是回想起那天的事，脑中就会发生强烈的闪回现象。要回到红莉栖去世的地方，实在是强人所难。  
+我们来到了广播会馆。比屋定想要来这里代表着什么，我也立即就理解了。因为这里是，牧濑红莉栖逝世的地方。在那之后我也到过很多次楼顶。时间机器现在还在那里，铃羽和桶子偶尔会前去为其保养。就在几天前，我还被铃羽叫过去，用枪口指着。尽管如此，位于 8 层的，作为现场的仓库，在那之后我再也没有去过。没有去的勇气。只是回想起那天的事，脑中就会发生强烈的闪回现象。要回到红莉栖去世的地方，实在是强人所难。  
 “没事吧？脸色很差啊。”  
 “……”  
 “想起了红莉栖的事情吗？”  
