--- a/article/sg0/doc/0041.md
+++ b/article/sg0/doc/0041.md
@@ -90,7 +90,7 @@
 “还没，不过对方好像知道咱们这里。”  
 “所、所以说，这到底怎么回事啊？”  
 “那家伙……在监视 LAB。”  
-半年前在广播馆屋顶上，那个穿着黑色骑手装窥视时间机器，被她发现追赶却逃之夭夭的人，绝对就是篝。那之后，铃羽一直更加谨慎地看管时间机器，附近再也没有发现篝的痕迹——铃羽完全没想到，篝居然在监视 LAB。  
+半年前在广播馆楼顶上，那个穿着黑色骑手装窥视时间机器，被她发现追赶却逃之夭夭的人，绝对就是篝。那之后，铃羽一直更加谨慎地看管时间机器，附近再也没有发现篝的痕迹——铃羽完全没想到，篝居然在监视 LAB。  
 “不，稍微思考一下也理所当然。  
  那家伙，想阻止我们到达命运石之门。  
  她不想把这个世界变成没有发生过。  
@@ -120,7 +120,7 @@
 “总感觉铃羽口中的篝碳，和想象中的差别很大啊……  
  我还在想会不会是更加温柔一点、更软乎乎的、更可爱的女孩子呢。”  
 “如果是那样就好了。嗯，我之前也这么想。但是，现在的篝……可能……”  
-看她当时从广播馆屋顶逃走的动作就能知道，她绝对接受了专业的战斗训练。她还是小孩子的时候，铃羽曾经教过她基础的防身术。年龄增长之后的她远超那种程度，被赋予了更加冷酷的杀人技术。从 1998 年行踪不明到现在，没有人知道她身在何处，到底经历了什么。但是，铃羽明白，她绝对是真心实意地在阻止自己的计划。  
+看她当时从广播馆楼顶逃走的动作就能知道，她绝对接受了专业的战斗训练。她还是小孩子的时候，铃羽曾经教过她基础的防身术。年龄增长之后的她远超那种程度，被赋予了更加冷酷的杀人技术。从 1998 年行踪不明到现在，没有人知道她身在何处，到底经历了什么。但是，铃羽明白，她绝对是真心实意地在阻止自己的计划。  
 
 （稍后）  
 
