--- a/article/sg0/doc/0046.md
+++ b/article/sg0/doc/0046.md
@@ -139,7 +139,7 @@
 ![](../static/image/0046-6.png)
 
 车站前，停着两辆好像是军用深绿色涂装的卡车。车上陆续下来了许多穿着迷彩服、全副武装的男人。本以为是自卫队，但是那群穿迷彩服的男人并非日本人。很难把这场景和日本联系起来。  
-众目睽睽之下，穿着迷彩服的那群人消失在了小巷里。那条路前方通向广播馆。而真帆昨天从冈部口中得知，那里的屋顶上有台时间机器。  
+众目睽睽之下，穿着迷彩服的那群人消失在了小巷里。那条路前方通向广播馆。而真帆昨天从冈部口中得知，那里的楼顶上有台时间机器。  
 （难道是，STRATFO？）  
 又或者是俄罗斯，还是别的国家的军队？  
 他们会展开作战行动，也是因为真帆把从冈部那里问出来的情报报告给了雷斯吉宁教授吧。  
