--- a/article/sg0/doc/0108.md
+++ b/article/sg0/doc/0108.md
@@ -87,7 +87,7 @@
 
 “是这里吗？”  
 “…………”  
-矗立在秋叶原车站前的，非常靓丽的建筑——广播会馆——开始的地方。没错，一切都是从这里开始的。那一天，出现在屋顶的时间机器。我和红莉栖的第一次相遇，就在那不久之后。即使现在我也能回想起来，那双像是在挑衅一样的眼睛。回想起来，我可能那时候就已经迷上红莉栖了。这里，是我第一次遇见红莉栖的地方，但是同时也是在这里，我把她……把她……  
+矗立在秋叶原车站前的，非常靓丽的建筑——广播会馆——开始的地方。没错，一切都是从这里开始的。那一天，出现在楼顶的时间机器。我和红莉栖的第一次相遇，就在那不久之后。即使现在我也能回想起来，那双像是在挑衅一样的眼睛。回想起来，我可能那时候就已经迷上红莉栖了。这里，是我第一次遇见红莉栖的地方，但是同时也是在这里，我把她……把她……  
 “唔——！”  
 “冈伦？怎么了？”  
 “抱、抱歉……”  
@@ -103,7 +103,7 @@
 手上传来柔软的触感。篝紧紧地握住了我的手。  
 “谢……谢……”  
 我像是被篝领着一样，双腿颤颤巍巍地走进了广播会馆热闹的通道里。可能是篝握着我的手的缘故，就算进到里面我也比想象中的要镇静。话虽这么说，还是不想踏上发生过那件事的台阶。  
-我们乘坐电梯，去往屋顶。  
+我们乘坐电梯，去往楼顶。  
 
 ![](../static/image/0108-3.png)
 
