--- a/article/sg0/doc/0117.md
+++ b/article/sg0/doc/0117.md
@@ -49,7 +49,7 @@
 不会有错，上面显示的，是我老妈的名字。  
 
 “诶！由季小姐原来是你的朋友啊！”  
-得知篝脑海中的歌的源头是我老妈——这个冲击性的事实之后，我们回到了 LAB。果然还是不好意思在真由理和篝的面前和家人通话，于是我在天寒地冻的日子跑上屋顶，才给家里打了电话。接通后，我和老妈确认她是不是去点心培训班上课了，结果她回答“你不知道吗？”  
+得知篝脑海中的歌的源头是我老妈——这个冲击性的事实之后，我们回到了 LAB。果然还是不好意思在真由理和篝的面前和家人通话，于是我在天寒地冻的日子跑上楼顶，才给家里打了电话。接通后，我和老妈确认她是不是去点心培训班上课了，结果她回答“你不知道吗？”  
 “是吗，那首歌啊……完全没注意到自己哼出声了呢，怪不好意思呢，啊哈哈哈。”  
 “那首歌从哪里听来的。”  
 “从哪里？”  
