--- a/article/sg0/doc/0047.md
+++ b/article/sg0/doc/0047.md
@@ -58,7 +58,7 @@
 突然，远处响起了爆炸声。周围的人们发出惨叫，惊慌失措地各自向各自的方向逃走。火焰伴随着爆炸声后燃起，地点在刚才那些穿迷彩服的男人们消失的方向。直升机螺旋桨的声音越来越大，那个黑色的狰狞的机体，从刚才开始就在真帆的视野里若隐若现。接着，响起了激烈的枪战声。那不是一个两个人开枪的动静。复数的集团彼此间的战斗，正在秋叶原车站前如火如荼地展开。犹如战争开始了……依照冈部说的话，阿万音铃羽说不定就在时间机器附近，或许已经被卷入到那场战斗中。刚才那个穿黑色骑手装的女人也很让人在意。  
 为了给自己做过的事做个了结，真帆连思绪都没来得及整理好，就这样摇摇晃晃地走了起来。  
 
-广播馆的电梯故障中，无法使用。真帆无奈，只好爬楼梯向屋顶走去。馆内好像停电了，不管哪层都没有照明。上方传来断断续续的枪战声。不可思议的是，没有看见一个避难的人。楼内有很多店铺，当然也应该有客人才是。然而，明明电梯正在故障中，在楼梯也一个人都没遇到。是大家在这之前就去避难了吗，还是……在哪里藏着，等着这可怕的事态结束？一边想着，真帆满身是汗地继续爬楼梯。  
+广播馆的电梯故障中，无法使用。真帆无奈，只好爬楼梯向楼顶走去。馆内好像停电了，不管哪层都没有照明。上方传来断断续续的枪战声。不可思议的是，没有看见一个避难的人。楼内有很多店铺，当然也应该有客人才是。然而，明明电梯正在故障中，在楼梯也一个人都没遇到。是大家在这之前就去避难了吗，还是……在哪里藏着，等着这可怕的事态结束？一边想着，真帆满身是汗地继续爬楼梯。  
 就要到达楼顶的时候，真帆在馆内第一次遇到其他人。  
 
 ![](../static/image/0047-3.png)
