统一用词：@ch 超自然版块

--- a/article/sg0/doc/0146.md
+++ b/article/sg0/doc/0146.md
@@ -40,9 +40,9 @@
 “哇哦！”  
 我不由自主地叫出声。面对其他顾客投来的冷眼，我微微点点头致歉，立刻看回手机的画面。令人惊讶地，搜索结果居然有几百条，貌似全部都是 @ch 的帖子。粗略看下搜索结果一览，确认日期，最早能追溯到 2008 年。这也是生前的红莉栖的遗留之物吗……竟然在这种地方都能发现红莉栖的痕迹。  
 （话说，这也发得太多了吧……）  
-没想到她是这么重度的 @cher……红莉栖发帖的版块有物理学、数学、科幻和……当然，也有很多在超自然板块。比如，SF 相关的帖子里，有关时间机器的问题，她都热火朝天地发表着意见。但和 α 世界线不同的是，她并没有完全否定时间机器，意外地，还发表过和肯定派相近的见解。  
+没想到她是这么重度的 @cher……红莉栖发帖的版块有物理学、数学、科幻和……当然，也有很多在超自然版块。比如，SF 相关的帖子里，有关时间机器的问题，她都热火朝天地发表着意见。但和 α 世界线不同的是，她并没有完全否定时间机器，意外地，还发表过和肯定派相近的见解。  
 （不，其实也没那么意外……）  
-毕竟她可是私底下悄悄写出了货真价实的关于时间机器的论文啊。和那相比，在超自然板块上发的，只是一些激烈的讨论罢了。用仿佛让以前经常在电视上露面的某大学教授也会落荒而逃的气势，一个劲地驳倒那些拥护非科学主张的人们。比如解释麦田怪圈、闹鬼、人体起火之类的超自然现象，还有验证欧帕兹的可信性、玛雅历是否暗示了人类的灭亡、人类的基因是否来自地球外这些阴谋论。她以甚至会让其他人都感到扫兴的详细程度，分析关于神秘现象的小道消息，冷静而透彻地否定它们。如果有人勇于挑起争论，她就完全击溃对手。完全就是红莉栖的风格，条理清晰到令人无能狂怒。这家伙实际上，很喜欢这种关于神秘现象的小道消息吧？投入过多的热情才会对它们刨根问底吧。  
+毕竟她可是私底下悄悄写出了货真价实的关于时间机器的论文啊。和那相比，在超自然版块上发的，只是一些激烈的讨论罢了。用仿佛让以前经常在电视上露面的某大学教授也会落荒而逃的气势，一个劲地驳倒那些拥护非科学主张的人们。比如解释麦田怪圈、闹鬼、人体起火之类的超自然现象，还有验证欧帕兹的可信性、玛雅历是否暗示了人类的灭亡、人类的基因是否来自地球外这些阴谋论。她以甚至会让其他人都感到扫兴的详细程度，分析关于神秘现象的小道消息，冷静而透彻地否定它们。如果有人勇于挑起争论，她就完全击溃对手。完全就是红莉栖的风格，条理清晰到令人无能狂怒。这家伙实际上，很喜欢这种关于神秘现象的小道消息吧？投入过多的热情才会对它们刨根问底吧。  
 （不管怎么说，也太过孩子气了吧……）  
 在和红莉栖第一次相遇的、去年夏天的 ATF，我也是这样被辩驳得体无完肤。但是……以那天为界，『栗悟饭和龟波功』的帖子应该就中断了吧。最后一条帖子定格在去年的 7 月 27 日，红莉栖去世的前一天，内容是针对嘲笑第二天中钵博士的时间机器发表会的言论，她有些较真的反驳。  
 
