--- a/article/sg0/doc/0044.md
+++ b/article/sg0/doc/0044.md
@@ -9,16 +9,15 @@
 位于和光市的【脑科学综合研究机构·日本办公室&准备室】与半年前相比没有任何变化。还是一样大得离谱，空空荡荡的，摆放着许多没有人使用的办公桌。桌面上的灰尘……好像比之前更厚。半年前，雷斯吉宁教授他们从这里搬走之后，这里一直没有其他人使用了吧。  
 “特地把你叫过来真是不好意思啊，*Rintaro*。”  
 “啊，没什么。”  
-登录『Amadeus』的 App 需要更新为最新版本，因此我在大学的课结束后赶到了这间办公室。现在，比屋定正为了更新而将我的智能手机连上数据线，用 PC 操作着。说是差不多 10 分钟就能完成更新了，于是就发着呆等着。  
-“话说，*Rintaro*，我想以前也提到过，要不要认真地考虑下留学的事？”  
+登录『Amadeus』的 App 需要更新为最新版本，因此我在大学的课结束后赶到了这间办公室。现在，比屋定正在将我的智能手机通过数据线连上电脑，盯着屏幕操作着。说是差不多 10 分钟就能完成更新，于是我就发着呆等着。  
+“话说，*Rintaro*，我想我之前也提到过，你要不要认真考虑下留学的事？”  
 “哎！？”  
 “你觉得没问题的话，我可以帮你写个推荐信。当然，也需要通过测试和面试。”  
 我慌张地摆正姿势。  
-“那个，真的是非常感谢您……  
- ……但是我想以我现在的学习水平可能有些困难。  
- 我是真心以维克多·孔多利亚大学为目标的。所以，绝对不想失败。  
+“那个，真的是非常感谢您……但是我想以我现在的水平可能有些困难。  
+ 我是真心以维克多·孔多利亚大学为目标，所以，绝对不想失败。  
  因此，我认为至少还要用一年的时间来专心学习才行。”  
-雷斯吉宁教授微微嘟着嘴唇，听着我语无伦次的说明。然后，过了一会儿——  
+雷斯吉宁教授微微嘟着嘴，听着我语无伦次的说明。然后，过了一会儿——  
 “*OK, OK！*”  
 他拍了拍我的肩膀，露出满意的笑容。  
 “你果然是个非常深思熟虑的青年啊。”  
@@ -26,7 +25,7 @@
 嘴上说着简单，其实，或许我只是胆小。  
 有时候是需要不畏挫败踏前一步的勇气的。  
 现在的我……怎么说呢……  
-“那么，挑战留到明年吗？”  
+“那么，等到明年再挑战吗？”  
 “是呢……”  
 机会……就这样错过了吧……雷斯吉宁教授愿意等我到明年吗？心中荡起了不安。  
 “太过钻牛角尖也不好哦。  
@@ -38,8 +37,7 @@
 “好的！”  
 我低头鞠躬，打从心底里表示感谢。能与这个人相遇，是我人生的一大幸运。  
 “…………”  
-无意中，我与比屋定的视线对上了。她立刻错开目光继续低头工作。  
-不知为何，我总觉得比屋定的微笑的表情中掩藏着些许的悲伤。  
+无意中，我与比屋定的视线对上了，她立刻错开目光继续低头工作。不知为何，我总觉得比屋定那微笑的表情中掩藏着些许的悲伤。  
 
 ![](../static/image/0044-1.png)
 
@@ -52,7 +50,7 @@
 “前辈就是这样粗枝大叶，才至今都找不到男朋友哟。”  
 我的智能手机里传来了“红莉栖”无奈的声音。  
 App 升级结束后，『Amadeus』一直启动着。  
-“啊…多管闲事！”  
+“啊……多管闲事！”  
 “房间这样的惨状还邀请别人做客……通常来说都会羞耻得做不到的。”  
 “唔……”  
 不过，我本人也不擅长整理，这方面还是别说太多了。  
