--- a/article/sg0/doc/0057.md
+++ b/article/sg0/doc/0057.md
@@ -46,7 +46,7 @@
 再次思考，这种时候最好的办法是什么？不能依靠警察之类公共机构的话，就只剩——和里世界有关联的人物了。  
 里世界……吗？  
 说完立刻从脑子里驱散了这种想法。太蠢了。像这种中二病的思考方式，我早就已经摒弃了。  
-这么说起来……曾经也有像这样，在秋叶原街上满大街找东西找到筋疲力尽的时候呢。虽然那时的目标是物而不是人。IBN5100。铃羽在过去世界找到的东西，半年前我在 α 世界线的秋叶原也找过。那时候——红莉栖也在身边。我和红莉栖得知琉华子老家仓库有 IBN5100 后，合力把那台笨重的 PC 搬了回来。
+这么说起来……曾经也有像这样，在秋叶原街上满大街找东西找到筋疲力尽的时候呢。虽然那时的目标是物而不是人。IBN5100。铃羽在过去世界找到的东西，半年前我在 α 世界线的秋叶原也找过。那时候——红莉栖也在身边。我和红莉栖得知琉华子老家仓库有 IBN5100 后，合力把那台笨重的老式电脑搬了回来。
 
 ![](../static/image/0057-6.png)
 
