--- a/article/sg0/doc/0148.md
+++ b/article/sg0/doc/0148.md
@@ -53,7 +53,7 @@
 现在，她正在将修正程序转换成 IBN5100 专用语言。之后，再把这个程序以病毒的形式扩散到全世界，就能完全解决被这个时代的工程师忽略的“千年虫问题”。  
 就在这时，手机终端的辅助屏幕上显示了 “CONNECT” 这个单词。  
 “OK，连上了。”
-听说这个时代的日本，ADSL 线路还处于测试阶段，一般用户的网络环境应该是使用 ISDN 的低带宽拨号链接。不过，类似秋叶原周边的大城市地区，大学和研究所，以及 PC 相关企业的核心区域，已经配备了可持续连接的光纤宽带线路，其中有些设施甚至已经开始使用无线局域网了。铃羽入侵了其中一处。爸爸曾经笑着说，在 2036 年的技术面前，20 世纪末的网络防火墙就像纸一样——事实上也的确如此。  
+听说这个时代的日本，ADSL 线路还处于测试阶段，一般用户的网络环境应该是使用 ISDN 的低带宽拨号链接。不过，类似秋叶原周边的大城市地区，大学和研究所，以及电脑相关企业的核心区域，已经配备了可持续连接的光纤宽带线路，其中有些设施甚至已经开始使用无线局域网了。铃羽入侵了其中一处。爸爸曾经笑着说，在 2036 年的技术面前，20 世纪末的网络防火墙就像纸一样——事实上也的确如此。  
 
 “但、但是……如果改变了未来，篝和大家在一起的未来世界……也会完全改变的吧……？”  
 令人意外的是，篝好像粗略地理解了刚才铃羽所说的话。  
